fixed table spacing

--- a/styles/global_style.css
+++ b/styles/global_style.css
@@ -3,7 +3,6 @@ body {
   background-color: #f9f9f9;
 }
 
-/* Default table styles for this demo */
 table {
   border-collapse: collapse;
   text-align: left;
@@ -13,10 +12,9 @@ table th {
   text-transform: uppercase;
   font-weight: 600;
   padding-top: 1rem;
-  padding-right: 2.5rem;
+  padding-right: 2.25rem;
   padding-bottom: 1rem;
 }
 table td {
-  /* padding-right: 2rem; */
   padding-bottom: 0.25rem;
 }
